# internal/server/auth.go
@@ -2,13 +2,13 @@ package server
 
 import (
 	"context"
+	"github.com/SuKaiFei/go-wxxcx/internal/conf"
 	"github.com/SuKaiFei/go-wxxcx/internal/util"
 	"github.com/go-kratos/kratos/v2/errors"
 	"github.com/go-kratos/kratos/v2/transport/http"
+	"net/url"
 	"strconv"
 	"time"
-
-	"github.com/SuKaiFei/go-wxxcx/internal/conf"
 
 	"github.com/go-kratos/kratos/v2/middleware"
 )
@@ -23,35 +23,41 @@ func MiddlewareAuth(cApp *conf.Application) middleware.Middleware {
 		return func(ctx context.Context, req interface{}) (reply interface{}, err error) {
 			h := ctx.(http.Context)
 			request := h.Request()
-
-			referer := request.Header.Get("Referer")
-			if len(referer) < 44 {
-				return nil, ErrBadAppid
-			}
-			appid := referer[26:44]
-			app, found := cApp.GetMp()[appid]
-			if !found {
-				return nil, ErrBadAppid
-			}
-
-			timestamps := request.URL.Query()["timestamp"]
-			if len(timestamps) == 0 || len(timestamps[0]) == 0 {
-				return nil, ErrBadSign
-			}
-			timestamp, err := strconv.Atoi(timestamps[0])
-			if err != nil {
-				return nil, ErrBadSign
-			}
-			if time.Since(time.Unix(int64(timestamp), 0)) > 5*time.Second {
-				return nil, ErrBadSign
-			}
-
-			sign := util.GetSign(request.URL.Query(), app.GetKey())
-			if request.URL.Query()["sign"][0] != sign {
-				return nil, ErrBadSign
+			if err = requestAuth(cApp, request.Header.Get("Referer"), request.URL); err != nil {
+				return nil, err
 			}
 
 			return handler(ctx, req)
 		}
 	}
+}
+
+func requestAuth(cApp *conf.Application, referer string, requestUrl *url.URL) error {
+	if len(referer) < 44 {
+		return ErrBadAppid
+	}
+	appid := referer[26:44]
+	app, found := cApp.GetMp()[appid]
+	if !found {
+		return ErrBadAppid
+	}
+
+	timestamps := requestUrl.Query()["timestamp"]
+	if len(timestamps) == 0 || len(timestamps[0]) == 0 {
+		return ErrBadSign
+	}
+	timestamp, err := strconv.Atoi(timestamps[0])
+	if err != nil {
+		return ErrBadSign
+	}
+	if time.Since(time.Unix(int64(timestamp), 0)) > 5*time.Second {
+		return ErrBadSign
+	}
+
+	sign := util.GetSign(requestUrl.Query(), app.GetKey())
+	if requestUrl.Query()["sign"][0] != sign {
+		return ErrBadSign
+	}
+
+	return nil
 }
